--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "name": "grunt-angular-app",
   "description": "AngularJS + Grunt",
   "version": "0.1.0",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "docco": "*",
     "grunt": "~0.4.1",
@@ -12,6 +11,8 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-jade": "~0.4.0"
+    "grunt-jade": "~0.4.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-contrib-stylus": "~0.5.0"
   }
 }
