--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-jade": "~0.4.0",
     "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-stylus": "~0.5.0"
+    "grunt-contrib-stylus": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1"
   }
 }
