--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1"
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-bower-task": "~0.2.2"
   }
 }
