--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-bower-task": "~0.2.2"
+    "grunt-bower-task": "~0.2.2",
+    "phantomjs": "~1.9.0-3"
   }
 }
